syntax = "proto3";
option go_package = "gitlab.com/beneath-org/beneath/gateway/grpc/proto";
package gateway.v1;

message Record {
  bytes avro_data = 1;
  int64 timestamp = 2;
}

service Gateway {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc QueryLog(QueryLogRequest) returns (QueryLogResponse) {}
  rpc QueryIndex(QueryIndexRequest) returns (QueryIndexResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
}

message PingRequest {
  string client_id = 1;
  string client_version = 2;
}

message PingResponse {
  bool authenticated = 1;
  string version_status = 2;
  string recommended_version = 3;
}

message WriteRequest {
  bytes instance_id = 1;
  repeated Record records = 2;
}

message WriteResponse {
  bytes write_id = 1;
}

message QueryLogRequest {
  bytes instance_id = 1;
  int32 partitions = 2;
  bool  peek = 3;
}

message QueryLogResponse {
  repeated bytes replay_cursors = 1;
  repeated bytes change_cursors = 2;
}

message QueryIndexRequest {
  bytes  instance_id = 1;
  int32  partitions  = 2;
  string filter      = 3;
}

message QueryIndexResponse {
  repeated bytes replay_cursors = 1;
  repeated bytes change_cursors = 2;
}

message ReadRequest {
  bytes instance_id = 1;
  bytes cursor = 2;
  int32 limit  = 3;
}

message ReadResponse {
  repeated Record records = 1;
  bytes next_cursor = 2;
}

message SubscribeRequest {
  bytes instance_id = 1;
  bytes cursor = 2;
}

message SubscribeResponse {
  // repeated Record records = 1;
  // bytes from_cursor = 2;
  // bytes next_cursor = 3;
}
